--- a/css/ip-bootstrap.css
+++ b/css/ip-bootstrap.css
@@ -191,6 +191,112 @@ a img { border: none; }
 
 
 
+.notifications-container .read i { font-weight: inherit; color: inherit; }
+.notifications-container .read { border-left: 0; }
+
+.notifications-container .unread i { font-weight: 1000; }
+
+.notifications-container {
+    display: none;
+    position: absolute;
+    width: 360px;
+    z-index: 99999999999;
+    padding: 8px;
+}
+.notifications-container .navatar {
+    display: none;
+}
+.navatar {
+    float: left;
+    margin: 0 8px 8px 0;
+}
+.navatar img {
+    width: 48px;
+    height: 48px;
+}
+.notifications-container .nall {
+    text-align: center;
+    margin: 16px 0 0 0;
+}
+.notifications-container .notifications-inner {
+    height: 360px;
+    width: 100%;
+    overflow: auto;
+}
+.notifications-bell {
+    font-size: 18px;
+}
+.notifications-bell:hover {
+    color: #ffffff;
+}
+.notifications-bell sup {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    text-align: center;
+    border-radius: 100%;
+    font-size: 10px;
+    margin-left: -10px;
+    vertical-align: super;
+}
+.notifications-container a {
+    display: inline;
+    text-transform: none;
+    padding: 0;
+    line-height: 1;
+    border: 0;
+}
+.notifications-container a:hover {
+    background: none;
+    box-shadow: none;
+}
+.notification-item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+    padding: 0 8px 20px 8px;
+    margin: 0 0 8px 0;
+    font-size: 14px;
+}
+.notification-item time {
+    display: block;
+    font-size: 12px;
+}
+.notifications-container .notification-item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+    padding: 8px;
+    margin: 0 0 8px 0;
+    font-size: 12px;
+}
+.notifications-container .notification-item time {
+    display: block;
+    font-size: 10px;
+}
+.notifications-inner::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+}
+.notifications-inner::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
+}
+.notifications-inner::-webkit-scrollbar-thumb {
+    background-color: #000000;
+}
+.notifications-title {
+    display: none;
+}
+.notifications-container .notifications-title {
+    display: block;
+    margin: 16px 0 16px 0;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+}
+.ip_notification_mark {
+    float: right;
+    font-weight: 400;
+}
 
 
 
@@ -219,6 +325,28 @@ a img { border: none; }
 .pagination li.active a {
     background-color: rgba(0, 0, 0, 0.15);
 }
+
+
+.question {
+    text-align: center;
+    font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 24px;
+    opacity: 0;
+    z-index: 999999999999;
+}
+
+.yes, .cancel {
+    margin-top: .5em;
+    margin-right: .5em;
+    cursor: pointer;
+}
+
+
+
+
+
+
 
 
 
@@ -387,6 +515,12 @@ a img { border: none; }
     padding: 16px 8px;
     font-size: 14px;
 }
+.cinnamon-meta { float: left; padding: 4px 8px; line-height: 1.2; text-align: center; font-size: 90%; }
+.cinnamon-meta:first-child { padding-left: 0; }
+.cinnamon-meta:last-child { border-right: 0 none; padding-right: 8px; }
+.cinnamon-meta a { text-decoration: none; }
+
+.ip-tabs li.cinnamon-stats-column { float: right; }
 
 .cinnamon-user {
     float: left;
@@ -810,12 +944,14 @@ ul, li {padding: 0; margin: 0; list-style: none}
 .editor-image-manager .editor-image .editor-image-thumbnail img {
     border-radius: 3px;
     width: auto;
-    height: 72px;
+    height: 90px;
 }
 .editor-image .editableImage {
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
+}
+.editor-image .editableImage.editableImageActive {
 }
 
 #ip-info {
@@ -825,6 +961,7 @@ ul, li {padding: 0; margin: 0; list-style: none}
 
 
 @media only screen and (max-width : 480px) {
+    .ip-tabs li.cinnamon-stats-column { float: none; display: block; text-align: center; padding: 16px 0 0 0; }
     .cinnamon-avatar { width: 88%; }
     .cinnamon-meta { float: none; display: inline-block; }
     .cinnamon-meta:last-child { border-right: 0 none; }
@@ -959,6 +1096,21 @@ ul, li {padding: 0; margin: 0; list-style: none}
 }
 
 
+
+/*
+ * Infinite loading on profile page
+ */
+.profile-hub-container .ip_box {
+    display: none;
+}
+.profile-hub-container #ipProfileShowMore {
+    text-align: center;
+    margin: 16px auto;
+    padding: 16px;
+    font-size: 16px;
+    display: block;
+    clear: both;
+}
 
 
 
